# DI-Bench

./: .gitignore  .pre-commit-config.yaml  README.md  eval.sh  inference.sh  pyproject.toml  start_server.sh
.github/workflows/: test.yml
bigbuild/curate/: __init__.py  collect.py  crawling.py  main.py  run.py  stats.py  verify.py
bigbuild/curate/curator/: __init__.py  base.py  csharp.py  java.py  make_prompt.py  python.py  rust.py  typescript.py
bigbuild/harness/: constants.py  evaluator.py  run_evaluator.py  utils.py
bigbuild/inference/: run_builder.py
bigbuild/inference/builder/: __init__.py  base.py  pigar.py
bigbuild/inference/builder/pattern/: builder.py
bigbuild/inference/builder/slide/: builder.py  prompt.py
bigbuild/utils/: __init__.py  ci.py  docker.py  log.py  repo.py
bigbuild/utils/build_system/: __init__.py  base.py  csharp.py  python.py  rust.py  typescript.py
bigbuild/utils/llm/provider/: __init__.py  anthropic.py  azure.py  base.py  google.py  hf.py  openai.py  vllm.py
bigbuild/utils/llm/provider/request/: __init__.py  anthropic.py  azure.py  google.py  openai.py
dibench/: __init__.py  depinfer.py  eval.py  infer.md  prompt.py
dibench/curate/: crawling.py  curate.md  curate.py  verify.py
dibench/curate/curator/: base.py  prompt.py
dibench/evaluate/: evaluator.py  utils.py
dibench/utils/: __init__.py  ci.py  docker.py  repo.py
dibench/utils/buildfile/: __init__.py  base.py  csharp.py  javascript.py  python.py  rust.py
dibench/utils/provider/: __init__.py  base.py  openai.py
docs/: infer.md
experiments/: check_mini_context.py  context_distribution.py  cutoff_date_distribution.py  dep_distribution.py  package_hist.py  package_omit_cases.py
scripts/: check_build_sysytem.py  clean_org.py  clone_checkout.py  cost_analyze.py  file_level_pigar_generate.py  make_report.py  mini_tasks_prompt_stats.py  precache_repos.py  prompt_filter.py  push_to_hub.py  push_to_org.py  pyego_patchgen.py  render.py
tests/: test_build_system.py  test_curate.py  test_evaluate.py  test_llm.py  test_load_dataset.py
tests/data/: Pipfile  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  test_dataset.jsonl
tests/data/dummy_repo/.github/workflows/: ci.yml
tests/data/example-results/python/inducer_cgen/: patch.diff
tests/demo_projects/python/src/: import_error.py
