[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Junhao Wang <junhaoo.wang@gmail.com>"]
readme = "README.md"

[project]
dependencies = [
    "cryptography",
    "freezegun",
    "installer",
    "pytest",
    "pytest-cov",
    "pytest-rerunfailures",
    "pytest-xdist",
    "scripttest",
    "setuptools",
    "virtualenv < 20.0 ; python_version < '3.10' and (sys_platform != 'darwin' or platform_machine != 'arm64')",
    "virtualenv >= 20.0 ; python_version >= '3.10' or (sys_platform == 'darwin' and platform_machine == 'arm64')",
    "werkzeug",
    "wheel",
    "tomli-w",
    "proxy.py",
]

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^5.5"
setuptools = ">= 40.8.0, != 60.6.0"
wheel = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
