[metadata]
name = data
version = 0.1.0
description =
author = Junhao Wang <junhaoo.wang@gmail.com>
long_description = file: README.md

[options]
python_requires = >=3.10
install_requires =
    cryptography
    freezegun
    installer
    pytest
    pytest-cov
    pytest-rerunfailures
    pytest-xdist
    scripttest
    setuptools
    virtualenv < 20.0 ; python_version < '3.10' and (sys_platform != 'darwin' or platform_machine != 'arm64')
    virtualenv >= 20.0 ; python_version >= '3.10' or (sys_platform == 'darwin' and platform_machine == 'arm64')
    werkzeug
    wheel
    tomli-w
    proxy.py
    coverage >= 4.4
    setuptools >= 40.8.0, != 60.6.0
    wheel


[options.package_data]
* = README.md

[build-system]
requires =
    poetry-core
build-backend = poetry.core.masonry.api
